# domain-expertise

./: .gitignore  README.md  pyproject.toml
domains/_template/: principles.md
domains/_template/examples/: _template.md
domains/_template/rubrics/: _template.md
domains/context_matching/: domain.yaml  principles.md
domains/context_matching/rubrics/: awareness-matching.md  offer-matching.md  traffic-matching.md
domains/conversion_copy/: domain.yaml  principles.md
domains/conversion_copy/rubrics/: body-copy-evaluation.md  cta-evaluation.md  headline-evaluation.md
domains/copywriting/: domain.yaml  principles.md
domains/copywriting/rubrics/: headline-analysis.md
domains/email_copy/: domain.yaml  principles.md
domains/email_copy/rubrics/: subject-line-analysis.md
domains/landing_pages/: domain.yaml  principles.md
domains/landing_pages/rubrics/: page-audit.md
domains/page_architecture/: domain.yaml  principles.md
domains/page_architecture/rubrics/: hero-evaluation.md  layout-evaluation.md  page-flow-evaluation.md
domains/trust_building/: domain.yaml  principles.md
domains/trust_building/rubrics/: risk-reversal-evaluation.md  social-proof-evaluation.md  testimonial-evaluation.md
src/expertise/: __init__.py  cli.py  engine.py  parser.py  types.py
src/expertise/adapters/: __init__.py  base.py  sqlite.py  supabase.py
src/expertise/authoring/: __init__.py  agent.py  prompts.py
src/expertise/loaders/: __init__.py  base.py  docx.py  markdown.py  pdf.py  text.py  unified.py
supabase/: README.md
supabase/migrations/: 001_domain_examples.sql
(+18 files in other folders)
